--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,26 +5,26 @@ on: [push, workflow_dispatch]
 jobs:
     meterian_scan:
         name: Meterian client scan
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         steps: 
           - name: Checkout
             uses: actions/checkout@v3
             
-          - name: Set up JDK 11
+          - name: Setup JDK 11
             uses: actions/setup-java@v3
             with:
                 java-version: '11'
                 distribution: 'adopt'
                 
-          - name: setup-cocoapods
+          - name: Setup cocoapods
             uses: maxim-lobanov/setup-cocoapods@v1
             with:
                 version: 1.9.0
         
-          - name: Download the meterian CLI
+          - name: Download the Meterian Thin CLient
             run: wget -N https://www.meterian.io/downloads/meterian-cli.jar
             
-          - name: Scan project with the Meterian client
+          - name: Scan project with the Meterian Thin CLient
             run: java -jar meterian-cli.jar
             env:
                 METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
