--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
                 distribution: 'adopt'
                         
           - name: Download the Meterian Thin CLient
-            run: wget -N https://www.meterian.io/downloads/meterian-cli.jar
+            run: wget -q https://www.meterian.io/downloads/meterian-cli.jar
             
           - name: Scan project with the Meterian Thin CLient
             run: java -jar meterian-cli.jar
