--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs:
         name: Meterian client scan
         runs-on: macos-latest
         steps: 
-          - name: Checkout
+          - name: Checkout (official GitHub action)
             uses: actions/checkout@v3
             
-          - name: Setup JDK 11
+          - name: Setup JDK 11 (official GitHub action)
             uses: actions/setup-java@v3
             with:
                 java-version: '11'
