--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
                 java-version: '11'
                 distribution: 'adopt'
                         
-          - name: Download the Meterian Thin CLient
+          - name: Download the Meterian Thin Client
             run: wget -q https://www.meterian.io/downloads/meterian-cli.jar
             
-          - name: Scan project with the Meterian Thin CLient
+          - name: Scan project with the Meterian Thin Client
             run: java -jar meterian-cli.jar
             env:
                 METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
